feature/movie-all: refactor movie get all